--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             <div class="chat-wrapper">
                 <div class="chat-header">
                     <h2 id="ai-title">🤖 اسأل "دحمان بوت" عني</h2>
-                    <p id="ai-sub" class="subtitle">مساعدي الشخصي (يعمل بـ Gemini AI)</p>
+                    <p id="ai-sub" class="subtitle">مساعدي الشخصي </p>
                 </div>
                 
                 <div class="chat-box" id="chat-box">
