--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,8 @@
         </a>
     </div>
 </div>
+<!-- Scroll to Top Button -->
+<button id="scrollTopBtn" onclick="scrollToTop()">⬆️</button>
 <body class="dark-mode rtl">
 
     <div id="particles-js"></div>
